fix(overflow): fix div overflow by applying word-break

--- a/src/styles.css
+++ b/src/styles.css
@@ -179,6 +179,10 @@
   display: none;
 }
 
+.data-row .value .value-data {
+  word-break: break-all;
+}
+
 .show-data-types .data-row .value .type {
   display: inline-block;
 }
